--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "nodemon": "nodemon --watch ./server.js ./server.js",
-    "start": "node ./server.js",
-    "pretest": "eslint ./server.js --fix",
+    "nodemon": "nodemon --watch ./src/server.js ./src/server.js",
+    "start": "node ./src/server.js",
+    "pretest": "eslint ./src/server.js --fix",
     "test": "echo \"Tests complete\"",
     "doThing": "eslint --init"
   },
